<resources>
    <string name="app_name">lab3_UITest</string>
    <string name="font_size">字体大小</string>
    <string name="font10">小</string>
    <string name="font16">中</string>
    <string name="font20">大</string>
    <string name="normal_menu">普通菜单项</string>
    <string name="font_color">字体颜色</string>
    <string name="font_black">黑色</string>
    <string name="font_red">红色</string>
    <string name="menutv">用于测试的内容</string>
    <string name="item_delete">删除</string>
    <string name="item_cancel">取消</string>

</resources>
